--- a/index.html
+++ b/index.html
@@ -633,6 +633,32 @@
 
     </main>
 
+    <!-- Footer -->
+    <footer class="fixed bottom-0 left-0 w-full z-50 bg-slate-900/80 backdrop-blur-md border-t border-cyan-500/30 shadow-[0_-5px_20px_rgba(0,0,0,0.5)] transition-transform duration-300">
+        <div class="max-w-7xl mx-auto px-6 py-4 flex flex-col md:flex-row justify-between items-center gap-4">
+            <div class="flex items-center gap-4">
+                <div class="w-10 h-10 rounded-full bg-cyan-900/50 flex items-center justify-center border border-cyan-500/30">
+                    <i class="ph-fill ph-user-circle text-2xl text-cyan-400"></i>
+                </div>
+                <div>
+                    <h3 class="text-white font-bold orbitron tracking-wider text-base">VIVEK YADAV</h3>
+                    <p class="text-cyan-400/80 text-[10px] font-mono uppercase tracking-[0.2em]">System Administrator</p>
+                </div>
+            </div>
+            
+            <div class="flex flex-col md:items-end gap-1 text-sm text-gray-400 font-mono">
+                <a href="mailto:vivek.yadav.25cse@bmu.edu.in" class="hover:text-white transition-colors flex items-center gap-2 group px-3 py-1 rounded hover:bg-white/5">
+                    <i class="ph-bold ph-envelope-simple text-cyan-500 group-hover:text-cyan-400"></i>
+                    vivek.yadav.25cse@bmu.edu.in
+                </a>
+                <div class="flex items-center gap-2 hover:text-white transition-colors cursor-default px-3 py-1">
+                    <i class="ph-fill ph-phone text-cyan-600"></i>
+                    <span class="tracking-wider">9996445592</span>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Modal for Quizzes -->
     <div id="quiz-modal"
         class="fixed inset-0 z-[100] bg-black/90 backdrop-blur-md hidden flex items-center justify-center p-4">
